Fix horizontal scroll on iOS

--- a/assets/css/prismjs.scss
+++ b/assets/css/prismjs.scss
@@ -1,5 +1,8 @@
 .highlight {
     font-size: 14px;
-    overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+}
+
+.highlight > pre > code {
+    display: inline-block;
 }
